--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,97 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+  --breakpoint-sm: 640px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 1024px;
+  --breakpoint-xl: 1130px;
+  --breakpoint-2xl: 1520px;
+
+  /* colors */
+  --color-primary: #0d091a;
+  --color-secondary: #140e25;
+  --color-accent: #5810ff;
+  --color-acccent-hover: #4a0bde;
+  --color-tertiary: #201837;
+  --color-tertiary-hover: #271f40;
+
+  /* fonts  */
+  --font-primary: "Sometype Mono"
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+body{
+  @apply font-primary bg-primary text-white leading-relaxed
+}
+h1{
+  @apply text-[40px] md:text-[52px] xl:text-[58px] leading-[1] tracking-tight font-extrabold
+}
+h2{
+  @apply text-[32px] md:text-[36px] xl:text-[38px] leading-[1.15] tracking-tight font-medium
+}
+h3{
+  @apply text-[28px] md:text-[30px] xl:text-[32px] leading-[1.2] font-medium
+}
+h4{
+  @apply text-[22px] md:text-[26px] leading-snug font-medium
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+.container{
+  @apply px-[15px];
+}
+
+.btn{
+  @apply flex items-center justify-center rounded-full cursor-pointer transition-all font-medium h-[56px]
+}
+
+.btn-sm{
+  @apply min-w-[168px] px-5 text-[15px] font-semibold
+}
+
+.btn-lg{
+  @apply min-w-[200px] px-6
+}
+.btn-accent{
+  @apply bg-accent hover:bg-acccent-hover;
+}
+.btn-tertiary {
+  @apply bg-tertiary hover:bg-tertiary-hover;
+}
+.btn-white{
+  @apply bg-white hover:bg-white/90 text-primary
+}
+
+/* swiper  css */
+.swiper{
+  margin: 0 !important;
+}
+
+/* swiper bullets  */
+.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet, 
+.swiper-pagination-horiznotal.swiper-pagination-billets .swiper-pagination-bullet {
+  @apply bg-accent;
+}
+
+/* scroll */
+  html {
+    scroll-behavior: smooth;
   }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
+  .work-custom-scroll{
+    overflow-y: auto;
+  }
+  .work-custom-scroll::-webkit-scrollbar {
+    width: 6px;
+    border-radius: 100%;
+  }
+  .work-custom-scroll::-webkit-scrollbar-track {
+    background: #8e67eb;
+    border-radius: 10px;
+  }
+  .work-custom-scroll::-webkit-scrollbar-thumb {
+    /* background: #888; */
+    border-radius: 10px;
+    background: var(--color-accent);
+  }
+  .work-custom-scroll::-webkit-scrollbar-thumb:hover {
+    background: var(--color-accent);
+  }
